--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,31 @@
 {
-  "git.ignoreLimitWarning": true
+  "git.ignoreLimitWarning": true,
+  "eslint.workingDirectories": [
+        "src",
+        "server"
+    ],
+"[javascript]": {
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": false
+},
+"[javascriptreact]": {
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": false
+},
+"[typescript]": {
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": false
+},
+"[typescriptreact]": {
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": false
+},
+"eslint.validate": [
+  "javascript",
+  "javascriptreact"
+],
+"prettier.eslintIntegration": true,
+"editor.codeActionsOnSave": {
+  "source.fixAll.eslint": true
+},
 }
