adding multiselect support

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "restool",
-  "version": "2.2.3-login-37",
+  "version": "2.2.7",
   "dependencies": {
     "@smcloudstore/aws-s3": "^0.2.1",
     "ajv": "^6.12.1",
@@ -8,7 +8,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "flat": "^5.0.0",
+    "i": "^0.3.6",
     "lodash": "^4.17.15",
+    "ml-param-store-node": "^1.0.40",
+    "multiselect-react-dropdown": "^1.5.7",
     "natural-orderby": "^2.0.3",
     "node-sass": "^4.13.0",
     "query-string": "^6.9.0",
@@ -24,10 +27,10 @@
     "tsc": "tsc",
     "build:server": "tsc -p ./tsconfig.server.json",
     "server:dev": "TS_NODE_PROJECT='./tsconfig.server.json' ts-node-dev --respawn --transpileOnly server/index.ts && wait-on tcp:1729",
-    "dev": "NODE_ENV=development && npm run app:env:loader &&run-p server:dev start",
+    "dev": "NODE_ENV=development && npm run app:env:loader && run-p server:dev start",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build:all": "NODE_ENV=production npm run app:env:loader && run-p build:server build",
+    "build:all": "NODE_ENV=production && npm run app:env:loader && run-p build:server build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prepare": "npm run build",
